syntax = "proto3";

option java_package = "de.thws.fiw.gymmanagement.application";
option java_multiple_files = true;




service GymService {
    rpc GetMember(GetMemberRequest) returns (GetMemberResponse);
    rpc CreateMember(CreateMemberRequest) returns (CreateMemberResponse);
    rpc GetAllMembers(Empty) returns (GetAllMembersResponse);
}

message GetAllMembersResponse {
    repeated GetMemberResponse members = 1;
}

message Empty {}


message GetMemberRequest {
    int64 memberId = 1;
}

message GetMemberResponse {
    int64 memberId = 1;
    string name = 2;
    string membershipType = 3;
}

message CreateMemberRequest {
    string name = 1;
    string membershipType = 2;
}

message CreateMemberResponse {
    int64 memberId = 1;
}


